packages/apex-parser-ast/test/fixtures/validation/syntax-error/MissingClosingQuote.cls
public class MissingClosingQuote {
    public void test() {
        String s = "unclosed
    }
}
